kubernetes/helm-charts/k8s-resources/video-stack-configuration/istio/virtualservices/radarr-virutalservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: radarr
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - internal-gateway
  http:
    - match:
        - uri:
            prefix: /radarr
      route:
        - destination:
            host: radarr.videos.svc.cluster.local
            port:
              number: 80
