kubernetes/helm-charts/k8s-resources/video-stack-configuration/istio/virtualservices/sonarr-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sonarr
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - internal-gateway
  http:
    - match:
        - uri:
            prefix: /sonarr
      route:
        - destination:
            host: sonarr.videos.svc.cluster.local
            port:
              number: 80
